--- a/LightTube/Views/Shared/Renderers/ContainerRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/ContainerRenderer.cshtml
@@ -233,6 +233,8 @@
 			}
 		</div>
 		break;
+	case "ad":
+		break;
 	default:
 		<h1>Unexpected ContainerRendererData.Style: <code>@Model.Renderer.Style</code></h1>
 		break;
