--- a/LightTube/Views/Shared/Renderers/Channel/ChannelHome.cshtml
+++ b/LightTube/Views/Shared/Renderers/Channel/ChannelHome.cshtml
@@ -20,7 +20,7 @@
 						// im sorry
 						InnerTubePlayer player = Context.RequestServices.GetService<SimpleInnerTubeClient>()
 							!.GetVideoPlayerAsync(video.VideoId, false).Result;
-						PlayerContext playerContext = new(Context, player, null, "channel-promoted-video", false, "18", []);
+						PlayerContext playerContext = new(Context, player, null, "channel-promoted-video", false, "18", [], false);
 						<partial name="Player" model="playerContext"/>
 					}
 					catch (Exception ex)
