--- a/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
@@ -11,12 +11,29 @@
 	case "video":
 		VideoRendererData video = (VideoRendererData)Model.Renderer.Data;
 		<div class="renderer-videorenderer">
-			<a class="thumbnail" href="/watch?v=@video.VideoId">
+			<div class="thumbnail" href="/watch?v=@video.VideoId">
 				<img loading="lazy" src="@video.Thumbnails.LastOrDefault()?.Url" alt="@video.Title">
 				<div class="thumbnail__duration__container">
 					<span class="thumbnail__duration">@video.Duration.ToDurationString()</span>
 				</div>
-			</a>
+				<div class="thumbnail__buttons__container">
+					<a href="/addToPlaylist?v=@video.VideoId" class="thumbnail__button" title="@Model.Localization.GetString("watch.save")">
+						<svg class="bi" width="20" height="20" fill="currentColor">
+							<use xlink:href="/svg/bootstrap-icons.svg#folder-plus"/>
+						</svg>
+					</a>
+					<a href="/watch?v=@video.VideoId&audioOnly=true" class="thumbnail__button" title="@Model.Localization.GetString("video.listen")">
+						<svg class="bi" width="20" height="20" fill="currentColor">
+							<use xlink:href="/svg/bootstrap-icons.svg#headphones"/>
+						</svg>
+					</a>
+					<a href="/download/@video.VideoId" class="thumbnail__button" title="@Model.Localization.GetString("video.download")">
+						<svg class="bi" width="20" height="20" fill="currentColor">
+							<use xlink:href="/svg/bootstrap-icons.svg#download"/>
+						</svg>
+					</a>
+				</div>
+			</div>
 			<div class="info">
 				<a href="/watch?v=@video.VideoId" class="ml-2 title" title="@video.Title">
 					@video.Title
