--- a/LightTube/Views/Shared/Renderers/Channel/ChannelGrid.cshtml
+++ b/LightTube/Views/Shared/Renderers/Channel/ChannelGrid.cshtml
@@ -14,7 +14,8 @@
 					<div class="compact-thumbnail__duration__container">
 						<span class="compact-thumbnail__duration">@video.Duration.ToDurationString()</span>
 					</div>
-					<div class="thumbnail__buttons__container">
+					<a href="/watch?v=@video.VideoId" class="thumbnail__video-href"></a>
+						<div class="thumbnail__buttons__container">
 						<a href="/addToPlaylist?v=@video.VideoId" class="thumbnail__button" title="@Model.Localization.GetString("watch.save")">
 							<svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="/svg/bootstrap-icons.svg#folder-plus"/>
