--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -283,11 +283,12 @@
 						case "video":
 							VideoRendererData video = (VideoRendererData)renderer.Data;
 							<div class="renderer-compactvideorenderer">
-								<div class="compact-thumbnail" href="/watch?v=@video.VideoId">
+								<div class="compact-thumbnail">
 									<img loading="lazy" src="@video.Thumbnails.LastOrDefault()?.Url" alt="@video.Title">
 									<div class="compact-thumbnail__duration__container">
 										<span class="compact-thumbnail__duration">@video.Duration.ToDurationString()</span>
 									</div>
+									<a href="/watch?v=@video.VideoId" class="thumbnail__video-href"></a>
 									<div class="thumbnail__buttons__container">
 										<a href="/addToPlaylist?v=@video.VideoId" class="thumbnail__button" title="@Model.Localization.GetString("watch.save")">
 											<svg class="bi" width="20" height="20" fill="currentColor">
