--- a/LightTube/wwwroot/css/renderers.css
+++ b/LightTube/wwwroot/css/renderers.css
@@ -271,6 +271,13 @@
 	margin-top: 0;
 }
 
+.thumbnail__video-href {
+	grid-row: 1 / 3;
+	grid-column: 1 / 3;
+	width: 100%;
+	height: 100%;
+}
+
 .thumbnail__playlist__overlay {
 	grid-row: 1 / 3;
 	grid-column: 2 / 2;
